--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "taphouse",
   "version": "1.0.0",
-  "description": "",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -35,6 +34,8 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "url-loader": "^0.6.2",
     "webpack": "^3.4.0",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^2.5.0"
-  }
+  },
+  "description": ""
 }
