--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"moment": "^2.18.1",
 		"bootstrap": "^4.3.1",
 		"css-loader": "^3.2.0",
 		"materialize-css": "^1.0.0-rc.2",
